[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/eye-3-64.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Buttons/Button.gd" type="Script" id=2]
[ext_resource path="res://normal_font.tres" type="DynamicFont" id=3]

[node name="IconButton" type="Button"]
margin_right = 35.0
margin_bottom = 35.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 0.988235, 1 )
icon = ExtResource( 1 )
flat = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.313726, 0.501961, 0.556863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveRect" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
mouse_filter = 2
color = Color( 0.411765, 0.635294, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_IconButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_IconButton_mouse_exited"]
